[gd_scene load_steps=12 format=3 uid="uid://db2ggd4o0fcu2"]

[ext_resource type="Script" path="res://scenes/rock/rock.gd" id="1_auysr"]
[ext_resource type="Texture2D" uid="uid://cf4u7ffc7c1fo" path="res://assets/sprites/Sunnyside_World_Assets/spr_tileset_sunnysideworld_16px (1).png" id="1_ls1tw"]
[ext_resource type="Texture2D" uid="uid://lsly3j0b5jh3" path="res://assets/sprites/ShadowLarge.png" id="2_dwbx2"]
[ext_resource type="PackedScene" uid="uid://b8omxkkkp8pw4" path="res://scenes/rock/minigame_spam.tscn" id="2_kgk3r"]
[ext_resource type="PackedScene" uid="uid://buhhmavythbjr" path="res://scenes/interact_press.tscn" id="7_8mfcb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tlxg0"]
atlas = ExtResource("1_ls1tw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ouyi"]
atlas = ExtResource("1_ls1tw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6s46"]
atlas = ExtResource("1_ls1tw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ddsva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlxg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ouyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6s46")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ehnf5"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_7y80r"]
radius = 6.0

[node name="Rock" type="Node2D" node_paths=PackedStringArray("mini_game")]
script = ExtResource("1_auysr")
mini_game = NodePath("MinigameSpam")
health = 1

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.32549)
z_index = -1
position = Vector2(0, 3)
scale = Vector2(0.58, 0.58)
texture = ExtResource("2_dwbx2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ddsva")
offset = Vector2(-2, 4.79213e-12)

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_ehnf5")

[node name="MinigameSpam" parent="." instance=ExtResource("2_kgk3r")]
visible = false
offset_left = -7.5
offset_top = -20.0
offset_right = -7.5
offset_bottom = -20.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_7y80r")

[node name="InteractPress" parent="." instance=ExtResource("7_8mfcb")]
position = Vector2(0, -32)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
